# servicerouting

./: README.md
HttpClient/app/: build.gradle
HttpClient/app/src/androidTest/java/com/example/httpclient/: ExampleInstrumentedTest.java
HttpClient/app/src/main/: AndroidManifest.xml
HttpClient/app/src/main/cpp/: CMakeLists.txt
HttpClient/app/src/main/cpp/include/: JniLog.h  dhcp_client.h  server_client.h
HttpClient/app/src/main/cpp/src/: dhcp_client.cpp  native-lib.cpp  server_client.cpp
HttpClient/app/src/main/java/com/example/httpclient/: MainActivity.java
HttpClient/app/src/main/res/layout/: activity_main.xml
HttpClient/gradle/wrapper/: gradle-wrapper.properties
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dhcp_client
client/include/: dhcp_client.h
client/src/: dhcp_client.cpp
dhcp_server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dhcp_server_ext
dhcp_server/include/: dhcp_server.h  dhcp_server_ext.h
dhcp_server/src/: dhcp_server.cpp  dhcp_server_ext.cpp
